src/user.css
/* ... */
.Root__top-container:has(.lyrics-lyrics-container)
  .main-topBar-topbarContentWrapper {
  display: none !important;
}

.Root__main-view .main-topBar-container {
  margin-top: calc(-24px + var(--panel-gap) * -2);
  height: calc(24px + var(--panel-gap) * 2);
}

.main-topBar-container {
  position: fixed !important;
  left: 0;
  width: 100%;
  z-index: 5 !important;
  padding: 0;
}

.main-topBar-background {
  opacity: 1 !important;
  background-color: rgba(var(--spice-rgb-sidebar), 0.85) !important;
  backdrop-filter: blur(50px) saturate(2.5);
}

.main-topBar-background::before {
  content: '';
  z-index: -1;
  position: absolute;
  background-image: var(--noise-texture);
  opacity: var(--noise-opacity);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.main-entityHeader-withBackgroundImage {
  padding: 0 32px 24px;
  margin-top: 48px;
}

.main-entityHeader-title {
  font-size: unset;
  font-weight: 500;
  display: contents;
}

.main-entityHeader-titleInner {
  overflow: hidden;
}

h1,
h2,
h3,
.main-shelf-title,
.main-entityHeader-topbarTitle,
.main-type-canon,
.main-type-bass,
.main-cardHeader-text.main-type-alto,
.x-searchResultsTracks-title {
  font-weight: 500;
  letter-spacing: 0.1px !important;
  margin-bottom: 4px;
  white-space: normal;
}

.main-seeAll-link {
  margin-bottom: 10px;
}

.main-topBar-topbarContent {
  justify-content: center;
}

.queue-tabBar-header {
  text-align: center;
  min-width: 100px;
}

.queue-tabBar-headerItemLink {
  transition: background-color ease-out 167ms;
}

.main-topBar-historyButtons {
  align-items: center;
}

.main-topBar-historyButtons button:nth-child(1) {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_left_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
}

.main-topBar-historyButtons button:nth-child(2) {
  display: inline-flex !important;
  mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
  margin-right: 13px;
}

.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}

/* menus */

div#context-menu::before,
.main-contextMenu-menu::before {
  content: '';
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--border-radius-1);
  backdrop-filter: blur(35px) saturate(3.5);
  background-image: url('https://nimsandu.github.io/spicetify-bloom/assets/noise/noise_context_menu.png');
}

div#context-menu > .main-contextMenu-menu::before,
div#context-menu > .main-userWidget-dropDownMenu::before,
.main-userWidget-dropDownMenu > .main-contextMenu-menu::before {
  display: none;
}

.yxf_6IsQEmHjijEBUMTP:focus,
.yxf_6IsQEmHjijEBUMTP:hover,
.yxf_6IsQEmHjijEBUMTP.queue-tabBar-active {
  border-radius: var(--border-radius-1) !important;
  color: var(--spice-text) !important;
}

.main-contextMenu-menu,
.main-contextMenu-tippy,
.main-devicePicker-tooltip {
  background-color: rgba(var(--spice-rgb-card), 0.8) !important;
}

.main-contextMenu-filterPlaylistSearchContainer {
  height: auto;
}

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-3);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}

.main-contextMenu-disabled {
  color: var(--spice-subtext) !important;
}

.main-contextMenu-menuItemButton:hover,
.main-userWidget-dropDownMenuItemButton:hover,
.main-contextMenu-menuItemButton[aria-expanded='true'] {
  background-color: rgba(var(--spice-rgb-text), 0.1) !important;
  backdrop-filter: luminosity;
}

.main-contextMenu-disabled:hover {
  background-color: transparent !important;
}

.main-contextMenu-menuItem,
._60cb742e518d084c3c959007b9463b51-scss > li {
  margin: 1px 1px;
}

.main-contextMenu-menuItem:first-child,
._60cb742e518d084c3c959007b9463b51-scss > :first-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menuItem:last-child {
  margin: 1px 1px 1px;
}

._60cb742e518d084c3c959007b9463b51-scss > :last-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menu,
._60cb742e518d084c3c959007b9463b51-scss {
  border-radius: var(--border-radius-1);
  box-shadow: 0 0 2px var(--spice-layer-shadow) !important;
  background-color: var(--spice-card);
}

.queue-tabBar-dropdownItemLink {
  color: var(--spice-text) !important;
}

/* buttons */

.main-genericButton-buttonActive::after {
  background-color: var(--spice-accent) !important;
}

.main-genericButton-buttonActive {
  color: var(--spice-accent) !important;
}

.ButtonInner-md {
  width: auto;
}

.x-downloadButton-button,
.x-filterBox-expandButton,
.x-contributorButton-ContributorButton,
.x-filterBox-clearButton,
.playlist-inlineSearchBox-clearButton {
  color: var(--spice-subtext) !important;
}

.IAyWaeDamLJLjxuPeVKw {
  color: var(--spice-text) !important;
}

.icon,
.main-navBar-icon {
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  margin: auto;
  display: block;
}

.main-addButton-active:focus,
.main-addButton-active:hover,
.main-addButton-active {
  color: var(--spice-accent) !important;
}

.main-navBar-navBarLink .main-navBar-icon path,
.icon > svg,
.x-searchInput-searchInputIconContainer path,
.show-episodeBlock-playerActions svg,
.main-playButton-PlayButton polygon,
.main-playButton-PlayButton rect {
  display: none !important;
}

.view-homeShortcutsGrid-shortcut .main-playButton-PlayButton {
  opacity: 0;
}

.view-homeShortcutsGrid-shortcut:hover .main-playButton-PlayButton {
  opacity: 1;
}
/* ... */

